src/components/scrollable/scrollable.scss
.scrollable {
    display: flex;
    overflow: auto;
    width: 100%;

    &.horizontal {
        flex-direction: row;
    }
    &.vertical {
        flex-direction: column;
        height: 100%;
    }
    &::-webkit-scrollbar {
        height: 4px;
        width: 4px;
    }
    &::-webkit-scrollbar-track {
        background: rgba(33, 33, 33, 0.9);
        visibility: hidden;
    }
    &::-webkit-scrollbar-thumb {
        background-color: rgba(255, 255, 255, 0.3);
        border-radius: 3px;
        visibility: hidden;
    }
    &.scrolling::-webkit-scrollbar-track,
    &.scrolling::-webkit-scrollbar-thumb {
        visibility: visible;
    }
}

